fix: menu layout on small devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,10 +47,6 @@ body {
   src: url('/fonts/Patron-Medium.otf');
 }
 
-.shadow-popover-panel {
-  box-shadow: 0px 1px 14px 4px rgba(0, 0, 0, 0.1);
-}
-
 .list-orange-dots li::marker {
   color: #ff8c3c;
 }
@@ -88,22 +84,7 @@ body {
   scroll-behavior: smooth !important;
 }
 
-nav .shadow-popover-panel {
-  display: none;
-  position: absolute;
-  background-color: #fff;
-  min-width: 230px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-nav ul a {
-  padding: 1rem;
-  text-decoration: none;
-  display: block;
-}
-
-.children-menu:hover .shadow-popover-panel {
+.children-menu:hover .popover-panel {
   display: block;
 }
 
